# short_form_test_runner

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: default.yaml
config/strategies/: gothic_vignette.yaml  motivation_quotes.yaml  tech_tips.yaml
data/character_refs/: variants.yaml
data/music/gothic/: tracks.yaml
docs/: m2_pro_phase_0_handoff.md
scripts/: find_moments.py  generate_bartholomew.py
src/shortform/: __init__.py  __main__.py  cli.py  config.py
src/shortform/models/: __init__.py  asset.py  publish.py  script.py  strategy.py  video.py
src/shortform/pipeline/: __init__.py  context.py  runner.py  stage.py
src/shortform/stages/: __init__.py  analytics.py  assembly.py  publish.py  script_gen.py  tts.py  variant_select.py  visual_gen.py
src/shortform/store/: __init__.py  db.py  file_store.py
src/shortform/strategy/: __init__.py  evolver.py  selector.py  trend_detector.py
src/shortform/tts/: __init__.py  backend.py  edge_backend.py  f5_backend.py  registry.py  whisper_align.py
src/shortform/visuals/: __init__.py  backend.py  grok_imagine.py  pillow_backend.py  registry.py  veo_backend.py
tests/: test_assembly.py  test_captions.py  test_config.py  test_db.py  test_models.py  test_pipeline.py  test_script_gen.py  test_tts.py  test_visual_gen.py  test_visuals.py
