[project]
name = "shortform"
version = "0.1.0"
description = "Automated short-form video content creation platform"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "edge-tts>=7.0.0",
    "Pillow>=11.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "typer>=0.15.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.71.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "types-PyYAML>=6.0",
    "types-Pillow>=10.0",
]

[project.scripts]
shortform = "shortform.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shortform"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
